# xml-pattern-matching

./: .gitignore  README.md  TODO.md  account_information.xml  getting_started.py  matching.py  pyproject.toml
dev/: account_information.xml  match.py  match.xml
dev_scripts/: match.py  match.xml
test/: match_test.py
test/test_match_element/: test_extract_value.py  test_match.py  test_match_children.py  test_match_children.xml  test_match_element_child.py  test_match_element_child.xml
xml_pattern_matching/: exceptions.py  load.py  match.py  match_element.py  match_element_children.py  match_element_list.py  signature.py  utils.py
