[project]
name = "xml_pattern_matching"
description = "Matching conditional XML patterns and extracting values using a simple match object."
license = {text = "MIT License"}
version = "0.0.2"
authors = [
    {name = "Carl Steinbach", email = "Steinbachcf01@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "defusedxml"
]

[project.urls]
Homepage = "https://github.com/carl-steinach/xml-pattern-matching"
Issues = "https://github.com/carl-steinach/xml-pattern-matching/issues"
